--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,42 @@
 {
-    "name": "mindy/application",
-    "homepage": "https://github.com/studio107/Mindy_Application",
-    "version": "0.2.1",
-    "license": "BSD-3-Clause",
-    "autoload": {
-        "psr-4": {
-            "Mindy\\Application\\": "src/Mindy/Application"
-        }
-    },
-    "require": {
-        "php": ">=5.4",
-        "mindy/exception": "0.*",
-        "mindy/di": "0.*",
-        "mindy/helper": "0.*",
-        "mindy/console": "0.*",
-        "mindy/locale": "0.*",
-        "mindy/controller": "0.*",
-        "mindy/http": "0.*",
-        "mindy/middleware": "0.*",
-        "mindy/logger": "1.*",
-        "mindy/router": "0.*",
-        "mindy/event": "0.*",
-        "mindy/security": "0.*",
-        "mindy/session": "0.*"
-    },
-    "require-dev": {
-        "satooshi/php-coveralls": "dev-master"
-    },
-    "authors": [{
-        "name": "Maxim Falaleev",
-        "email": "max@studio107.ru",
-        "homepage": "http://studio107.ru",
-        "role": "Developer"
-    }],
-    "support": {
-        "issues": "https://github.com/studio107/Mindy_Application/issues?state=open"
+  "name": "mindy/application",
+  "homepage": "https://github.com/studio107/Mindy_Application",
+  "version": "0.2.2",
+  "type": "library",
+  "license": "BSD-3-Clause",
+  "autoload": {
+    "psr-4": {
+      "Mindy\\Application\\": "src/Mindy/Application"
     }
+  },
+  "require": {
+    "php": ">=5.4",
+    "mindy/exception": "0.*",
+    "mindy/di": "0.*",
+    "mindy/helper": "0.*",
+    "mindy/console": "0.*",
+    "mindy/locale": "0.*",
+    "mindy/controller": "0.*",
+    "mindy/http": "0.*",
+    "mindy/middleware": "0.*",
+    "mindy/logger": "1.*",
+    "mindy/router": "0.*",
+    "mindy/event": "0.*",
+    "mindy/security": "0.*",
+    "mindy/session": "0.*"
+  },
+  "require-dev": {
+    "satooshi/php-coveralls": "dev-master"
+  },
+  "authors": [
+    {
+      "name": "Maxim Falaleev",
+      "email": "max@studio107.ru",
+      "homepage": "http://studio107.ru",
+      "role": "Developer"
+    }
+  ],
+  "support": {
+    "issues": "https://github.com/studio107/Mindy_Application/issues?state=open"
+  }
 }
